// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`host default transformation includes shared dependencies 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`host when pluginOptions contains additional options for a default shared dependencies, merge consumer options with the default options 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "requiredVersion": "1.2.3",
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`host when pluginOptions contains additional shared dependencies, merge them with the default shared dependencies 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
          "useless-lib": {
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`host when pluginOptions contains options overriding the default options of a default shared dependencies, use the consumer options 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": false,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`host when the consumer config already contains fields, do not alter those fields 1`] = `
{
  "devtool": "eval-cheap-module-source-map",
  "mode": "development",
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
  "target": "web",
}
`;

exports[`host when the plugins array already exist, append ModuleFederationPlugin to the existing plugins array 1`] = `
{
  "plugins": [
    DummyPlugin {
      "_options": {},
    },
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`host when the router is not react-router, do not add react-router shared dependencies 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "name": "host",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote default transformation includes shared dependencies 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when pluginOptions contains a filename, use the consumer filename instead of the default one 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "toto",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when pluginOptions contains additional options for a default shared dependencies, merge consumer options with the default options 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "requiredVersion": "1.2.3",
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when pluginOptions contains additional remotes to expose, merge consumer options with the default options 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
          "./toto": "./src/toto",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when pluginOptions contains additional shared dependencies, merge them with the default shared dependencies 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
          "useless-lib": {
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when pluginOptions contains options overriding the default options of a default shared dependencies, use the consumer options 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": false,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when the consumer config already contains fields, do not alter those fields 1`] = `
{
  "devtool": "eval-cheap-module-source-map",
  "mode": "development",
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
  "target": "web",
}
`;

exports[`remote when the plugins array already exist, append ModuleFederationPlugin to the existing plugins array 1`] = `
{
  "plugins": [
    DummyPlugin {
      "_options": {},
    },
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/react-router": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
          "react-router-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;

exports[`remote when the router is not react-router, do not add react-router shared dependencies 1`] = `
{
  "plugins": [
    ModuleFederationPlugin {
      "_options": {
        "exposes": {
          "./register": "./src/register",
        },
        "filename": "remoteEntry.js",
        "name": "remote",
        "shared": {
          "@squide/core": {
            "eager": true,
            "singleton": true,
          },
          "@squide/webpack-module-federation": {
            "eager": true,
            "singleton": true,
          },
          "react": {
            "eager": true,
            "singleton": true,
          },
          "react-dom": {
            "eager": true,
            "singleton": true,
          },
        },
      },
    },
  ],
}
`;
